--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -17,7 +17,7 @@ jobs:
           version: 2
           php_version: 7.1
           php_extensions: zip gd
-          dev: no
+          args: --prefer-source --no-dev --optimize-autoloader
           ssh_key: ${{ secrets.SSH_KEY }}
           ssh_key_pub: ${{ secrets.SSH_KEY_PUB }}
       - name: Enter maintenance mode
