--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -15,7 +15,7 @@ jobs:
           version: 2
           php_version: 7.1
           php_extensions: zip gd
-          dev: no
+          args: --no-dev
           ssh_key: ${{ secrets.SSH_KEY }}
           ssh_key_pub: ${{ secrets.SSH_KEY_PUB }}
       - name: Enter maintenance mode
