test deploy ignores pushes to main

--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -1,5 +1,8 @@
 name: Deploy to test
-on: push
+on:
+  push:
+    branches-ignore:
+      - main
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
